syntax = "proto3";

option go_package = "api/proto/api";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";


service BlogService {

    rpc GetAllBlogs(BlogRequest) returns (GetAllBlogsResponse) {
        option (google.api.http) = {
            get: "/v1/Blogs"
        };
    }

    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {
        option (google.api.http) = {
            post: "/v1/Blog"
        };
    }

    rpc GetBlog(BlogRequest) returns (BlogResponse) {
        option (google.api.http) = {
            get: "/v1/Blog"
        };
    }

    rpc UpdateBlog(BlogRequest) returns (BlogResponse) {
        option (google.api.http) = {
            put: "/v1/Blog"
        };
    }

    rpc DeleteBlog(BlogRequest) returns (BlogResponse) {
        option (google.api.http) = {
            delete: "/v1/Blog"
        };
    }

}

message BlogRequest {
    string id = 1;
}

message BlogAllRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
            required: ["filter"]
        }
    };

    optional int32 page = 1;
    optional int32 per_page = 2 [json_name="per_page"];
    optional SortOrder order = 3 [json_name = "order"];

}

message BlogResponse {
    Blog blog = 1;
}

message GetAllBlogsResponse {
    map<string, Blog> blogs = 1;
}

message CreateBlogRequest {
    Blog blog = 1;
}

enum SortOrder {
    SORT_ORDER_UNKNOWN = 0;
    SORT_ORDER_ASC = 1;
    SORT_ORDER_DESC = 2;
}

message CreateBlogResponse {

}

message Blog {
    string id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
    string imagePath = 4;
    string type = 5;
    string category = 6;
    string title = 7;
    string body = 8;
    string version = 9;
}
